--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -2,17 +2,17 @@ name: Build OpenWrt
 
 on:
   repository_dispatch:
-   release:
+  release:
     types: published
-   push:
-   branches:
-       - master
-   paths:
-   - '.config'
-   schedule:
-     - cron: 0 8 * * 5
-  watch:
-    types: started
+  push:
+    branches:
+      - main
+    paths:
+      - '.config'
+#  schedule:
+#    - cron: 0 8 * * 5
+#  watch:
+#    types: started
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
